cargo-features = ["profile-rustflags"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
# codegen-units = 1  # Compile the entire crate as a single unit.
panic = "abort"
# opt-level = 2  # Optimize for size.
rustflags = ["-Ctarget-cpu=native"]
# debug = true

[package]
name = "rust_domino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
dfdx = "0.13.0"
arrayvec = "0.7.4"
quanta = "0.11.1"
bitarray = "0.10.0"

# cargo rustc --release -- --emit asm
